--- a/package.json
+++ b/package.json
@@ -3,26 +3,29 @@
 	"version": "0.1.0",
 	"private": false,
 	"dependencies": {
+		"@jridgewell/sourcemap-codec": "^1.4.14",
+		"@rollup/plugin-terser": "^0.4.0",
 		"@testing-library/jest-dom": "^5.14.1",
 		"@testing-library/react": "^11.2.7",
 		"@testing-library/user-event": "^12.8.3",
 		"@types/jest": "^26.0.23",
 		"@types/node": "^12.20.15",
-		"@types/react": "^17.0.13",
-		"@types/react-dom": "^17.0.8",
+		"@types/react": "^16.0.0",
+		"@types/react-dom": "^16.0.1",
 		"@types/react-redux": "^7.1.16",
 		"@types/react-router-dom": "^5.1.8",
-		"@types/react-typist": "^2.0.3",
 		"date-fns": "^2.23.0",
-		"react": "^17.0.2",
-		"react-dom": "^17.0.2",
+		"react": "^16.0.0",
+		"react-dom": "^16.0.1",
 		"react-redux": "^7.2.4",
+		"react-reveal": "^1.2.2",
 		"react-router-dom": "^5.2.0",
 		"react-router-redux": "^4.0.8",
 		"react-scripts": "^5.0.1",
 		"react-typist": "^2.0.5",
 		"redux-thunk": "^2.3.0",
 		"sass": "^1.35.1",
+		"svgo": "^2.8.0",
 		"typesafe-actions": "^5.1.0",
 		"typescript": "^4.3.5",
 		"web-vitals": "^1.1.2"
@@ -52,7 +55,7 @@
 		]
 	},
 	"devDependencies": {
-		"react-easy-emoji": "^1.4.0",
+		"@types/react-typist": "^2.0.3",
 		"react-reveal": "^1.2.2"
 	}
 }
